cmake_minimum_required(VERSION 3.9)
project(redispp)

set(CMAKE_CXX_STANDARD 11)

add_executable(redispp
        deps/hiredis/adapters/ae.h
        deps/hiredis/adapters/glib.h
        deps/hiredis/adapters/ivykis.h
        deps/hiredis/adapters/libev.h
        deps/hiredis/adapters/libevent.h
        deps/hiredis/adapters/libuv.h
        deps/hiredis/adapters/macosx.h
        deps/hiredis/adapters/qt.h
        deps/hiredis/examples/example-ae.c
        deps/hiredis/examples/example-glib.c
        deps/hiredis/examples/example-ivykis.c
        deps/hiredis/examples/example-libev.c
        deps/hiredis/examples/example-libevent.c
        deps/hiredis/examples/example-libuv.c
        deps/hiredis/examples/example-macosx.c
        deps/hiredis/examples/example-qt.cpp
        deps/hiredis/examples/example-qt.h
        deps/hiredis/examples/example.c
        deps/hiredis/async.c
        deps/hiredis/async.h
        deps/hiredis/dict.c
        deps/hiredis/dict.h
        deps/hiredis/fmacros.h
        deps/hiredis/hiredis.c
        deps/hiredis/hiredis.h
        deps/hiredis/net.c
        deps/hiredis/net.h
        deps/hiredis/read.c
        deps/hiredis/read.h
        deps/hiredis/sds.c
        deps/hiredis/sds.h
        deps/hiredis/sdsalloc.h
        deps/hiredis/test.c
        deps/hiredis/win32.h
        deps/jemalloc/include/jemalloc/internal/arena.h
        deps/jemalloc/include/jemalloc/internal/atomic.h
        deps/jemalloc/include/jemalloc/internal/base.h
        deps/jemalloc/include/jemalloc/internal/bitmap.h
        deps/jemalloc/include/jemalloc/internal/chunk.h
        deps/jemalloc/include/jemalloc/internal/chunk_dss.h
        deps/jemalloc/include/jemalloc/internal/chunk_mmap.h
        deps/jemalloc/include/jemalloc/internal/ckh.h
        deps/jemalloc/include/jemalloc/internal/ctl.h
        deps/jemalloc/include/jemalloc/internal/extent.h
        deps/jemalloc/include/jemalloc/internal/hash.h
        deps/jemalloc/include/jemalloc/internal/huge.h
        deps/jemalloc/include/jemalloc/internal/jemalloc_internal_decls.h
        deps/jemalloc/include/jemalloc/internal/jemalloc_internal_macros.h
        deps/jemalloc/include/jemalloc/internal/mb.h
        deps/jemalloc/include/jemalloc/internal/mutex.h
        deps/jemalloc/include/jemalloc/internal/pages.h
        deps/jemalloc/include/jemalloc/internal/prng.h
        deps/jemalloc/include/jemalloc/internal/prof.h
        deps/jemalloc/include/jemalloc/internal/ql.h
        deps/jemalloc/include/jemalloc/internal/qr.h
        deps/jemalloc/include/jemalloc/internal/quarantine.h
        deps/jemalloc/include/jemalloc/internal/rb.h
        deps/jemalloc/include/jemalloc/internal/rtree.h
        deps/jemalloc/include/jemalloc/internal/stats.h
        deps/jemalloc/include/jemalloc/internal/tcache.h
        deps/jemalloc/include/jemalloc/internal/tsd.h
        deps/jemalloc/include/jemalloc/internal/util.h
        deps/jemalloc/include/jemalloc/internal/valgrind.h
        deps/jemalloc/include/msvc_compat/C99/stdbool.h
        deps/jemalloc/include/msvc_compat/C99/stdint.h
        deps/jemalloc/include/msvc_compat/strings.h
        deps/jemalloc/include/msvc_compat/windows_extra.h
        deps/jemalloc/src/arena.c
        deps/jemalloc/src/atomic.c
        deps/jemalloc/src/base.c
        deps/jemalloc/src/bitmap.c
        deps/jemalloc/src/chunk.c
        deps/jemalloc/src/chunk_dss.c
        deps/jemalloc/src/chunk_mmap.c
        deps/jemalloc/src/ckh.c
        deps/jemalloc/src/ctl.c
        deps/jemalloc/src/extent.c
        deps/jemalloc/src/hash.c
        deps/jemalloc/src/huge.c
        deps/jemalloc/src/jemalloc.c
        deps/jemalloc/src/mb.c
        deps/jemalloc/src/mutex.c
        deps/jemalloc/src/pages.c
        deps/jemalloc/src/prof.c
        deps/jemalloc/src/quarantine.c
        deps/jemalloc/src/rtree.c
        deps/jemalloc/src/stats.c
        deps/jemalloc/src/tcache.c
        deps/jemalloc/src/tsd.c
        deps/jemalloc/src/util.c
        deps/jemalloc/src/valgrind.c
        deps/jemalloc/src/zone.c
        deps/jemalloc/test/include/test/btalloc.h
        deps/jemalloc/test/include/test/math.h
        deps/jemalloc/test/include/test/mq.h
        deps/jemalloc/test/include/test/mtx.h
        deps/jemalloc/test/include/test/SFMT-alti.h
        deps/jemalloc/test/include/test/SFMT-params.h
        deps/jemalloc/test/include/test/SFMT-params11213.h
        deps/jemalloc/test/include/test/SFMT-params1279.h
        deps/jemalloc/test/include/test/SFMT-params132049.h
        deps/jemalloc/test/include/test/SFMT-params19937.h
        deps/jemalloc/test/include/test/SFMT-params216091.h
        deps/jemalloc/test/include/test/SFMT-params2281.h
        deps/jemalloc/test/include/test/SFMT-params4253.h
        deps/jemalloc/test/include/test/SFMT-params44497.h
        deps/jemalloc/test/include/test/SFMT-params607.h
        deps/jemalloc/test/include/test/SFMT-params86243.h
        deps/jemalloc/test/include/test/SFMT-sse2.h
        deps/jemalloc/test/include/test/SFMT.h
        deps/jemalloc/test/include/test/test.h
        deps/jemalloc/test/include/test/thd.h
        deps/jemalloc/test/include/test/timer.h
        deps/jemalloc/test/integration/aligned_alloc.c
        deps/jemalloc/test/integration/allocated.c
        deps/jemalloc/test/integration/chunk.c
        deps/jemalloc/test/integration/mallocx.c
        deps/jemalloc/test/integration/MALLOCX_ARENA.c
        deps/jemalloc/test/integration/overflow.c
        deps/jemalloc/test/integration/posix_memalign.c
        deps/jemalloc/test/integration/rallocx.c
        deps/jemalloc/test/integration/sdallocx.c
        deps/jemalloc/test/integration/thread_arena.c
        deps/jemalloc/test/integration/thread_tcache_enabled.c
        deps/jemalloc/test/integration/xallocx.c
        deps/jemalloc/test/src/btalloc.c
        deps/jemalloc/test/src/btalloc_0.c
        deps/jemalloc/test/src/btalloc_1.c
        deps/jemalloc/test/src/math.c
        deps/jemalloc/test/src/mq.c
        deps/jemalloc/test/src/mtx.c
        deps/jemalloc/test/src/SFMT.c
        deps/jemalloc/test/src/test.c
        deps/jemalloc/test/src/thd.c
        deps/jemalloc/test/src/timer.c
        deps/jemalloc/test/stress/microbench.c
        deps/jemalloc/test/unit/atomic.c
        deps/jemalloc/test/unit/bitmap.c
        deps/jemalloc/test/unit/ckh.c
        deps/jemalloc/test/unit/hash.c
        deps/jemalloc/test/unit/junk.c
        deps/jemalloc/test/unit/junk_alloc.c
        deps/jemalloc/test/unit/junk_free.c
        deps/jemalloc/test/unit/lg_chunk.c
        deps/jemalloc/test/unit/mallctl.c
        deps/jemalloc/test/unit/math.c
        deps/jemalloc/test/unit/mq.c
        deps/jemalloc/test/unit/mtx.c
        deps/jemalloc/test/unit/prof_accum.c
        deps/jemalloc/test/unit/prof_active.c
        deps/jemalloc/test/unit/prof_gdump.c
        deps/jemalloc/test/unit/prof_idump.c
        deps/jemalloc/test/unit/prof_reset.c
        deps/jemalloc/test/unit/prof_thread_name.c
        deps/jemalloc/test/unit/ql.c
        deps/jemalloc/test/unit/qr.c
        deps/jemalloc/test/unit/quarantine.c
        deps/jemalloc/test/unit/rb.c
        deps/jemalloc/test/unit/rtree.c
        deps/jemalloc/test/unit/SFMT.c
        deps/jemalloc/test/unit/size_classes.c
        deps/jemalloc/test/unit/stats.c
        deps/jemalloc/test/unit/tsd.c
        deps/jemalloc/test/unit/util.c
        deps/jemalloc/test/unit/zero.c
        deps/linenoise/example.c
        deps/linenoise/linenoise.c
        deps/linenoise/linenoise.h
        deps/lua/etc/all.c
        deps/lua/etc/lua.hpp
        deps/lua/etc/min.c
        deps/lua/etc/noparser.c
        deps/lua/src/fpconv.c
        deps/lua/src/fpconv.h
        deps/lua/src/lapi.c
        deps/lua/src/lapi.h
        deps/lua/src/lauxlib.c
        deps/lua/src/lauxlib.h
        deps/lua/src/lbaselib.c
        deps/lua/src/lcode.c
        deps/lua/src/lcode.h
        deps/lua/src/ldblib.c
        deps/lua/src/ldebug.c
        deps/lua/src/ldebug.h
        deps/lua/src/ldo.c
        deps/lua/src/ldo.h
        deps/lua/src/ldump.c
        deps/lua/src/lfunc.c
        deps/lua/src/lfunc.h
        deps/lua/src/lgc.c
        deps/lua/src/lgc.h
        deps/lua/src/linit.c
        deps/lua/src/liolib.c
        deps/lua/src/llex.c
        deps/lua/src/llex.h
        deps/lua/src/llimits.h
        deps/lua/src/lmathlib.c
        deps/lua/src/lmem.c
        deps/lua/src/lmem.h
        deps/lua/src/loadlib.c
        deps/lua/src/lobject.c
        deps/lua/src/lobject.h
        deps/lua/src/lopcodes.c
        deps/lua/src/lopcodes.h
        deps/lua/src/loslib.c
        deps/lua/src/lparser.c
        deps/lua/src/lparser.h
        deps/lua/src/lstate.c
        deps/lua/src/lstate.h
        deps/lua/src/lstring.c
        deps/lua/src/lstring.h
        deps/lua/src/lstrlib.c
        deps/lua/src/ltable.c
        deps/lua/src/ltable.h
        deps/lua/src/ltablib.c
        deps/lua/src/ltm.c
        deps/lua/src/ltm.h
        deps/lua/src/lua.c
        deps/lua/src/lua.h
        deps/lua/src/lua_bit.c
        deps/lua/src/lua_cjson.c
        deps/lua/src/lua_cmsgpack.c
        deps/lua/src/lua_struct.c
        deps/lua/src/luac.c
        deps/lua/src/luaconf.h
        deps/lua/src/lualib.h
        deps/lua/src/lundump.c
        deps/lua/src/lundump.h
        deps/lua/src/lvm.c
        deps/lua/src/lvm.h
        deps/lua/src/lzio.c
        deps/lua/src/lzio.h
        deps/lua/src/print.c
        deps/lua/src/strbuf.c
        deps/lua/src/strbuf.h
        src/modules/helloblock.c
        src/modules/hellotype.c
        src/modules/helloworld.c
        src/modules/testmodule.c
        src/adlist.cpp
        src/adlist.h
        src/ae.cpp
        src/ae.h
        src/ae_epoll.cpp
        src/ae_evport.cpp
        src/ae_kqueue.cpp
        src/ae_select.cpp
        src/anet.cpp
        src/anet.h
        src/aof.cpp
        src/asciilogo.h
        src/atomicvar.h
        src/bio.cpp
        src/bio.h
        src/bitops.cpp
        src/blocked.cpp
        src/childinfo.cpp
        src/cluster.cpp
        src/cluster.h
        src/config.cpp
        src/config.h
        src/crc16.cpp
        src/crc64.cpp
        src/crc64.h
        src/db.cpp
        src/debug.cpp
        src/debugmacro.h
        src/defrag.cpp
        src/dict.cpp
        src/dict.h
        src/endianconv.cpp
        src/endianconv.h
        src/evict.cpp
        src/expire.cpp
        src/fmacros.h
        src/geo.cpp
        src/geo.h
        src/geohash.cpp
        src/geohash.h
        src/geohash_helper.cpp
        src/geohash_helper.h
        src/help.h
        src/hyperloglog.cpp
        src/intset.cpp
        src/intset.h
        src/latency.cpp
        src/latency.h
        src/lazyfree.cpp
        src/listpack.c
        src/listpack.h
        src/listpack_malloc.h
        src/lzf.h
        src/lzf_c.cpp
        src/lzf_d.cpp
        src/lzfP.h
        src/memtest.cpp
        src/module.cpp
        src/multi.cpp
        src/networking.cpp
        src/notify.cpp
        src/object.cpp
        src/pqsort.cpp
        src/pqsort.h
        src/pubsub.cpp
        src/quicklist.cpp
        src/quicklist.h
        src/rand.cpp
        src/rand.h
        src/rax.cpp
        src/rax.h
        src/rax_malloc.h
        src/rdb.cpp
        src/rdb.h
        src/redis-benchmark.cpp
        src/redis-check-aof.cpp
        src/redis-check-rdb.cpp
        src/redis-cli.cpp
        src/redisassert.h
        src/redismodule.h
        src/release.cpp
        src/release.h
        src/replication.cpp
        src/rio.cpp
        src/rio.h
        src/scripting.cpp
        src/sds.cpp
        src/sds.h
        src/sdsalloc.h
        src/sentinel.cpp
        src/server.cpp
        src/server.h
        src/setproctitle.cpp
        src/sha1.cpp
        src/sha1.h
        src/siphash.cpp
        src/slowlog.cpp
        src/slowlog.h
        src/solarisfixes.h
        src/sort.cpp
        src/sparkline.cpp
        src/sparkline.h
        src/stream.h
        src/syncio.cpp
        src/t_hash.cpp
        src/t_list.cpp
        src/t_set.cpp
        src/t_string.cpp
        src/t_zset.cpp
        src/testhelp.h
        src/util.cpp
        src/util.h
        src/version.h
        src/ziplist.cpp
        src/ziplist.h
        src/zipmap.cpp
        src/zipmap.h
        src/zmalloc.cpp
        src/zmalloc.h
        utils/hashtable/rehashing.c
        utils/lru/lfu-simulation.c
        utils/corrupt_rdb.c)
