cmake_minimum_required(VERSION 3.9)
project(redispp)

set(CMAKE_CXX_STANDARD 11)

set (HIREDIS_SOURCES
        deps/hiredis/adapters/ae.h
        deps/hiredis/adapters/glib.h
        deps/hiredis/adapters/ivykis.h
        deps/hiredis/adapters/libev.h
        deps/hiredis/adapters/libevent.h
        deps/hiredis/adapters/libuv.h
        deps/hiredis/adapters/macosx.h
        deps/hiredis/adapters/qt.h
        deps/hiredis/examples/example-ae.c
        deps/hiredis/examples/example-glib.c
        deps/hiredis/examples/example-ivykis.c
        deps/hiredis/examples/example-libev.c
        deps/hiredis/examples/example-libevent.c
        deps/hiredis/examples/example-libuv.c
        deps/hiredis/examples/example-macosx.c
        deps/hiredis/examples/example-qt.cpp
        deps/hiredis/examples/example-qt.h
        deps/hiredis/examples/example.c
        deps/hiredis/async.c
        deps/hiredis/async.h
        deps/hiredis/dict.c
        deps/hiredis/dict.h
        deps/hiredis/fmacros.h
        deps/hiredis/hiredis.c
        deps/hiredis/hiredis.h
        deps/hiredis/net.c
        deps/hiredis/net.h
        deps/hiredis/read.c
        deps/hiredis/read.h
        deps/hiredis/sds.c
        deps/hiredis/sds.h
        deps/hiredis/sdsalloc.h
        deps/hiredis/test.c
        deps/hiredis/win32.h
)
SET(LINENOISE_SOURCES
        deps/linenoise/example.c
        deps/linenoise/linenoise.c
        deps/linenoise/linenoise.h
)
SET(LUA_SOURCES
        deps/lua/etc/all.c
        deps/lua/etc/lua.hpp
        deps/lua/etc/min.c
        deps/lua/etc/noparser.c
        deps/lua/src/fpconv.c
        deps/lua/src/fpconv.h
        deps/lua/src/lapi.c
        deps/lua/src/lapi.h
        deps/lua/src/lauxlib.c
        deps/lua/src/lauxlib.h
        deps/lua/src/lbaselib.c
        deps/lua/src/lcode.c
        deps/lua/src/lcode.h
        deps/lua/src/ldblib.c
        deps/lua/src/ldebug.c
        deps/lua/src/ldebug.h
        deps/lua/src/ldo.c
        deps/lua/src/ldo.h
        deps/lua/src/ldump.c
        deps/lua/src/lfunc.c
        deps/lua/src/lfunc.h
        deps/lua/src/lgc.c
        deps/lua/src/lgc.h
        deps/lua/src/linit.c
        deps/lua/src/liolib.c
        deps/lua/src/llex.c
        deps/lua/src/llex.h
        deps/lua/src/llimits.h
        deps/lua/src/lmathlib.c
        deps/lua/src/lmem.c
        deps/lua/src/lmem.h
        deps/lua/src/loadlib.c
        deps/lua/src/lobject.c
        deps/lua/src/lobject.h
        deps/lua/src/lopcodes.c
        deps/lua/src/lopcodes.h
        deps/lua/src/loslib.c
        deps/lua/src/lparser.c
        deps/lua/src/lparser.h
        deps/lua/src/lstate.c
        deps/lua/src/lstate.h
        deps/lua/src/lstring.c
        deps/lua/src/lstring.h
        deps/lua/src/lstrlib.c
        deps/lua/src/ltable.c
        deps/lua/src/ltable.h
        deps/lua/src/ltablib.c
        deps/lua/src/ltm.c
        deps/lua/src/ltm.h
        deps/lua/src/lua.c
        deps/lua/src/lua.h
        deps/lua/src/lua_bit.c
        deps/lua/src/lua_cjson.c
        deps/lua/src/lua_cmsgpack.c
        deps/lua/src/lua_struct.c
        deps/lua/src/luac.c
        deps/lua/src/luaconf.h
        deps/lua/src/lualib.h
        deps/lua/src/lundump.c
        deps/lua/src/lundump.h
        deps/lua/src/lvm.c
        deps/lua/src/lvm.h
        deps/lua/src/lzio.c
        deps/lua/src/lzio.h
        deps/lua/src/print.c
        deps/lua/src/strbuf.c
        deps/lua/src/strbuf.h
)
SET(HELLO_MODULES_SOURCES
        src/modules/helloblock.c
        src/modules/hellotype.c
        src/modules/helloworld.c
        src/modules/testmodule.c
)
SET(WEIRD_SOURCES
        src/redis-benchmark.cpp
        src/redis-check-aof.cpp
        src/redis-check-rdb.cpp
        src/redis-cli.cpp
        utils/hashtable/rehashing.c
        utils/lru/lfu-simulation.c
        utils/corrupt_rdb.c
)

SET(REDIS_SERVER_SOURCES_EX
        src/adlist.cpp
        src/adlist.h
        src/ae.cpp
        src/ae.h
        src/ae_epoll.cpp
        src/ae_evport.cpp
        src/ae_kqueue.cpp
        src/ae_select.cpp
        src/anet.cpp
        src/anet.h
        src/aof.cpp
        src/asciilogo.h
        src/atomicvar.h
        src/bio.cpp
        src/bio.h
        src/bitops.cpp
        src/blocked.cpp
        src/childinfo.cpp
        src/cluster.cpp
        src/cluster.h
        src/config.cpp
        src/config.h
        src/crc16.cpp
        src/crc64.cpp
        src/crc64.h
        src/db.cpp
        src/debug.cpp
        src/debugmacro.h
        src/defrag.cpp
        src/dict.cpp
        src/dict.h
        src/endianconv.cpp
        src/endianconv.h
        src/evict.cpp
        src/expire.cpp
        src/fmacros.h
        src/geo.cpp
        src/geo.h
        src/geohash.cpp
        src/geohash.h
        src/geohash_helper.cpp
        src/geohash_helper.h
        src/help.h
        src/hyperloglog.cpp
        src/intset.cpp
        src/intset.h
        src/latency.cpp
        src/latency.h
        src/lazyfree.cpp
        src/listpack.c
        src/listpack.h
        src/listpack_malloc.h
        src/lzf.h
        src/lzf_c.cpp
        src/lzf_d.cpp
        src/lzfP.h
        src/memtest.cpp
        src/module.cpp
        src/multi.cpp
        src/networking.cpp
        src/notify.cpp
        src/object.cpp
        src/pqsort.cpp
        src/pqsort.h
        src/pubsub.cpp
        src/quicklist.cpp
        src/quicklist.h
        src/rand.cpp
        src/rand.h
        src/rax.cpp
        src/rax.h
        src/rax_malloc.h
        src/rdb.cpp
        src/rdb.h
        src/redisassert.h
        src/redismodule.h
        src/release.cpp
        src/release.h
        src/replication.cpp
        src/rio.cpp
        src/rio.h
        src/scripting.cpp
        src/sds.cpp
        src/sds.h
        src/sdsalloc.h
        src/sentinel.cpp
        src/server.cpp
        src/server.h
        src/setproctitle.cpp
        src/sha1.cpp
        src/sha1.h
        src/siphash.cpp
        src/slowlog.cpp
        src/slowlog.h
        src/solarisfixes.h
        src/sort.cpp
        src/sparkline.cpp
        src/sparkline.h
        src/stream.h
        src/syncio.cpp
        src/t_hash.cpp
        src/t_list.cpp
        src/t_set.cpp
        src/t_string.cpp
        src/t_zset.cpp
        src/testhelp.h
        src/util.cpp
        src/util.h
        src/version.h
        src/ziplist.cpp
        src/ziplist.h
        src/zipmap.cpp
        src/zipmap.h
        src/zmalloc.cpp
        src/zmalloc.h
)

SET(REDIS_SERVER_SOURCES
    src/adlist.cpp
    src/ae.cpp
    src/anet.cpp
    src/aof.cpp
    src/bio.cpp
    src/bitops.cpp
    src/blocked.cpp
    src/childinfo.cpp
    src/cluster.cpp
    src/config.cpp
    src/crc16.cpp
    src/crc64.cpp
    src/db.cpp
    src/debug.cpp
    src/defrag.cpp
    src/dict.cpp
    src/endianconv.cpp
    src/evict.cpp
    src/expire.cpp
    src/geo.cpp
    src/geohash_helper.cpp
    src/geohash.cpp
    src/hyperloglog.cpp
    src/intset.cpp
    src/latency.cpp
    src/lazyfree.cpp
    src/lzf_c.cpp
    src/lzf_d.cpp
    src/memtest.cpp
    src/module.cpp
    src/multi.cpp
    src/networking.cpp
    src/notify.cpp
    src/object.cpp
    src/pqsort.cpp
    src/pubsub.cpp
    src/quicklist.cpp
    src/rand.cpp
    src/rax.cpp
    src/rdb.cpp
    src/redis-check-aof.cpp
    src/redis-check-rdb.cpp
    src/release.cpp
    src/replication.cpp
    src/rio.cpp
    src/scripting.cpp
    src/sds.cpp
    src/sentinel.cpp
    src/server.cpp
    src/setproctitle.cpp
    src/sha1.cpp
    src/siphash.cpp
    src/slowlog.cpp
    src/sort.cpp
    src/sparkline.cpp
    src/syncio.cpp
    src/t_hash.cpp
    src/t_list.cpp
    src/t_set.cpp
    src/t_string.cpp
    src/t_zset.cpp
    src/util.cpp
    src/ziplist.cpp
    src/zipmap.cpp
    src/zmalloc.cpp
)


SET(CMAKE_OSX_SYSROOT /Applications/Xcode7.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk)
SET(CMAKE_OSX_DEPLOYMENT_TARGET 10.10)

include_directories(SYSTEM
    /Applications/Xcode7.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include/mach)
include_directories(
        deps/hiredis
        deps/linenoise
        deps/lua/src
        deps/jemalloc/include
)
add_definitions(
        -DMALLOC=jemalloc
)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -DREDIS_STATIC='')

include(deps/jemalloc/CMakeLists.txt)
#add_library(lua STATIC ${LUA_SOURCES})
#target_include_directories(jemalloc
#        PUBLIC deps/jemalloc/include
#        )

add_executable(redispp
        ${REDIS_SERVER_SOURCES})
target_compile_options(redispp PRIVATE -Wno-comment -Wno-writable-strings -Wno-empty-body)
#target_link_libraries(redispp lua)
target_link_libraries(redispp jemalloc)
